wordpress/cn27/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-cn27
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-cn27
  template:
    metadata:
      labels:
        app: wordpress-cn27
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: wordpress
      containers:
        - name: wordpress
          image: wordpress:7-php8.5-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-cn27-data
              mountPath: /var/www/html
      volumes:
        - name: wordpress-cn27-data
          persistentVolumeClaim:
            claimName: wordpress-cn27-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-cn27
  namespace: wordpress
spec:
  selector:
    app: wordpress-cn27
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
