wordpress/cn27/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-cn27-ingress
  namespace: wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cn27.cngei.it`)
      services:
        - kind: Service
          name: wordpress-cn27
          port: 80
  tls:
    secretName: wordpress-cn27-tls
